refactor(util): 优化IP地址工具类和字符串工具类
-重构IpAddressUtils类，改进IPv4和IPv6地址验证逻辑- 添加对IPv6压缩格式和内嵌IPv4格式的完整支持
- 完善本地IP地址获取方法，增强异常处理-优化DelegateObjectUtils中lambda表达式使用
- 更新StringJoinSplitUtils使用更现代的集合创建方式
- 重写IpAddressUtilsTest为IpAddressUtilsTests，增加全面的参数化测试
- 添加IPv4和IPv6地址边界值测试用例
- 改进工具类注释和文档说明